--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="App desenvolvido durante a semana spring react" />
-  <title>React App</title>
+  <title>Dsvendas</title>
 </head>
 
 <body>
-  <noscript>Você habilitar o js para rodar este app</noscript>
+  <noscript>Você precisa habilitar o js para rodar este app</noscript>
   <div id="root">
   </div>
 
